--- a/templates/game.html
+++ b/templates/game.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<!-- HTML code goes in here -->
+<!-- time test -->
 <head>
   <style>
     #countdown {
