--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<!-- HTML code goes in here
+<!-- HTML code goes in here -->
 <center>
    <h1>
    Winding Word Game
@@ -8,24 +8,7 @@
   
 <form action="start" method="get">
   <input type="submit" value="Start Game">
-</form> -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-</head>
-<body>
-    <h1>Welcome to the Game</h1>
-    <form action="/start" method="POST">
-        <button type="submit">Start Game</button>
-    </form>
-</body>
-</html>
-
+</form>
 
 
 
